ingress-nginx/https-deployment/manifests/01-semoss-ingress.yml
# ======================================================================
# Ingress - HTTP and HTTPS listener
# ======================================================================
# Purpose: Creates a loadbalancer with both HTTP and HTTPS
#          listeners redirecting all HTTP traffic to HTTPS
# 
# Notes:
#   - ingress-nginx allows the use of cloud provider controllers
#     like the AWS LoadBalancer controller using 
#     annotations
#   - ingress-nginx needs a certificate to terminate the TLS connection
#   
# ======================================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/app-root: /SemossWeb
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    nginx.ingress.kubernetes.io/hsts-preload: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-cookie-path: ~*^/.* /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "350"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "350"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-name: semoss-nginx-prod
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: 500m
  name: semoss-ingress
  namespace: semoss
spec:
  ingressClassName: nginx
  rules:
  - host: <DNS>
    http:
      paths:
      - backend:
          service:
            name: semoss-service
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - <DNS>
    secretName: tls-secret
